syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message Sum{
    float first_number = 1;
    float second_number = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    float result = 1;
}

message PrimeDecompositon {
    int64 number = 1;
}

message PrimeNumberDecompositionRequest {
    PrimeDecompositon primeDecompositon = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

service CalculatorService {
    // Unary 
    rpc Sum(SumRequest) returns (SumResponse){}

    // Server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};
}